[workspace]
members = [".", "derive"]

[package]
name = "envir"
version = "0.3.2"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"
description = "Deserialize/serialize struct from/to env"
repository = "https://github.com/sanpii/envir"

[dependencies.dotenvy]
version = "0.15"
optional = true

[dependencies.env_logger]
version = "0.11"
optional = true

[dependencies.envir_derive]
version = "0.3"
path = "derive/"
optional = true

[dependencies.regex]
version = "1.0"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["ansi",  "env-filter", "fmt", "registry", "std"]
optional = true

[features]
default = ["dotenv", "logger"]
dotenv = ["dotenvy"]
logger = ["env_logger"]
extrapolation = ["regex", "serde"]
serde = ["envir_derive"]
tracing = ["tracing-subscriber"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
