[workspace]
members = [".", "derive"]

[workspace.package]
version = "1.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sanpii/envir"

[package]
name = "envir"
description = "Deserialize/serialize struct from/to env"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies.dotenvy]
version = "0.15"
optional = true

[dependencies.env_logger]
version = "0.11"
optional = true

[dependencies.envir_derive]
version = "1.0"
path = "derive/"
optional = true

[dependencies.regex]
version = "1.0"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["ansi",  "env-filter", "fmt", "registry", "std"]
optional = true

[features]
default = ["dotenv", "logger"]
dotenv = ["dotenvy"]
logger = ["env_logger"]
extrapolation = ["regex", "serde"]
serde = ["envir_derive"]
tracing = ["tracing-subscriber"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
