[package]
name = "envir_derive"
version = "0.3.2"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"
description = "Derive macro for envir crate"
repository = "https://github.com/sanpii/envir"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "2.0"
features = ["extra-traits"]

[dev-dependencies.envir]
version = "0.2"
features = ["serde"]
