[package]
name = "envir_derive"
description = "Derive macro for envir crate"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.21"
proc-macro-crate = "3.2"
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "2.0"
features = ["extra-traits"]

[dev-dependencies.envir]
version = "1.0"
features = ["serde"]
